<resources>
    <string name="app_name">NEWS APP</string>
    <string name="action_settings">Setting</string>


    <!-- Strings for items in activity_main_drawer.xml -->
    <string name="ic_title_home">Home</string>
    <string name="ic_title_world">World</string>
    <string name="ic_title_science">Science</string>
    <string name="ic_title_sport">Sport</string>
    <string name="ic_title_environment">Environment</string>
    <string name="ic_title_society">Society</string>
    <string name="ic_title_fashion">Fashion</string>
    <string name="ic_title_business">Business</string>
    <string name="ic_title_culture">Culture</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <!-- Content description of the image -->
    <string name="image_des">Image</string>
    <string name="image_des_ic_share">Share</string>

</resources>